--- a/style.css
+++ b/style.css
@@ -33,9 +33,14 @@ body {
     grid-template-columns: 1fr 12fr;
 }
 
-#searchBar {
+#searchBar  {
+    box-sizing: border-box;
+    background-color: lightgray;
+    border: none;
+
+    border-radius: 12px;
     max-width: 600px;
-    max-height: 25px;
+    height: 30px;
 }
 
 .searchIcon {
@@ -68,9 +73,15 @@ body {
 }
 
 .buttonContainer button {
+    background: #15acf1;
     height: 50px;
     width: 100px;
-    border-radius: 10px;
+    border-radius: 25px;
+    color: white;
+    border: none;
+    font-weight: bold;
+    align-self: center;
+
 }
 
 .welcomeSection {
@@ -100,6 +111,13 @@ body {
     background-color: #10a1e4e1;
 }
 
+.sidebar img {
+    height: 2rem;
+    padding-right: 10px;
+    cursor: pointer;
+    filter: invert(1);
+}
+
 .icon {
     display: flex;
     font-weight: bold;
@@ -114,14 +132,16 @@ body {
 }
 
 li {
+    display: flex;
+    align-items: center;
     padding-bottom: 20px;
 }
 
+
 main {
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 320px 320px 420px;
-
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     gap: 25px;
@@ -130,24 +150,36 @@ main {
     padding: 40px 25px;
 }
 
-.projectHeader {
+
+
+.projectCard {
     display: grid;
-    grid-column: 1 / 3;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-rows: auto 1fr 1fr 1fr;
+    gap: 15px;
+
 }
 
-.projects {
-    display: grid; 
-    gap: 20px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+.projectCard h3 {
+    grid-column: 1 / -1;
 }
 
 .card {
+    padding: 2em;
     background-color: white;
+    border-left: 10px solid #495057;
+    border-radius: 10px;
+
+}
+
+.sideBox {
+    display: grid;
+    row-gap: 15px; 
 }
 
 .Announcements {
     display: flex;
+    grid-column: 3/3;
     gap: 15px;
     flex-direction: column;
 }
@@ -165,9 +197,9 @@ main {
 
 .trending {
     display: grid;
+    row-gap: 10px;
     justify-content: center;
-    grid-column: 2 / 2;
-    grid-row: 2 / 3;
+    grid-column: 3;
 }
 
 .trendingContainer {
