--- a/style.css
+++ b/style.css
@@ -17,13 +17,15 @@ body {
 
 .header {
     display: grid;
+    position: relative;
+    box-shadow: 0px 2px 5px lightslategray;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr;
     align-items: center;
     gap: 15px;
-    padding: 10px;
+    padding: 20px;
     grid-column: 2 / 3;
-    background-color: white
+    background-color: #fafafa         
 }
 
 .searchField {
@@ -44,8 +46,8 @@ body {
 }
 
 .searchIcon {
-    height: 50px;
-    width: 50px;
+    height: 25px;
+    width: 25px;
     background-image: url("../Admin-Dashboard/images/magnify.svg");
 }
 
@@ -58,8 +60,13 @@ body {
     gap: 15px;
 }
 
+.resize {
+    border-radius: 50%;
+    background-color: #38bdf8;
+}
+
 .profileContainer, .resize { 
-    max-height: 40px;
+    max-height: 50px;
 }
 
 .profileContainer, .resize1 {
@@ -73,8 +80,8 @@ body {
 }
 
 .buttonContainer button {
-    background: #15acf1;
-    height: 50px;
+    background: #38bdf8;
+    height: 35px;
     width: 100px;
     border-radius: 25px;
     color: white;
@@ -85,18 +92,21 @@ body {
 }
 
 .welcomeSection {
-    display: grid;
+    display: flex;
+    gap: 15px;
     align-items: center;
-    grid-template-columns: 60px 400px;
     padding-left: 25px;
 
 }
 
 
 .profilePicTwo {
-    height: 50px;
-    width: 50px;
-    background-image: url("./images/emoticon-confused-outline.svg");   
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    background-color: #38bdf8;
+    background-image: url("../Admin-Dashboard/images/Sprite-0001.png");  
+    background-size: cover; 
 }
 
 .sidebar {
@@ -108,7 +118,7 @@ body {
     padding: 15px 20px 20px 20px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    background-color: #10a1e4e1;
+    background-color: #38bdf8;
 }
 
 .sidebar img {
@@ -118,8 +128,9 @@ body {
     filter: invert(1);
 }
 
-.icon {
+.icon div {
     display: flex;
+    align-items: center;
     font-weight: bold;
     font-size: 20px;
     
@@ -128,7 +139,7 @@ body {
 .mainLinks, .secondLinks {
     list-style: none;
     font-size: 17px;
-    font-weight: 500;
+    font-weight: 800;
 }
 
 li {
@@ -145,7 +156,7 @@ main {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     gap: 25px;
-    background-color: lightgrey;
+    background-color: #cbd5e1;
     max-height: 100%;
     padding: 40px 25px;
 }
@@ -157,6 +168,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     grid-template-rows: auto 1fr 1fr 1fr;
     gap: 15px;
+    
 
 }
 
@@ -164,12 +176,33 @@ main {
     grid-column: 1 / -1;
 }
 
+.title {
+    font-weight: 700;
+}
+
 .card {
+    display: grid;
     padding: 2em;
-    background-color: white;
+    grid-template-rows: 30px 1fr auto;
+    background-color: #fafafa;
     border-left: 10px solid #495057;
     border-radius: 10px;
+    box-shadow: 0px 2px 5px lightslategray;
 
+}
+
+.imgBox {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.items {
+    display: flex;
+    gap: 10px;
+    grid-column: 3;
+    height: 25px;
+    width: 25px;
 }
 
 .sideBox {
@@ -179,13 +212,26 @@ main {
 
 .Announcements {
     display: flex;
+    
     grid-column: 3/3;
     gap: 15px;
     flex-direction: column;
 }
 
+.boldLetter{
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.words {
+    padding-bottom: 10px;
+    border-bottom: 1px solid grey;
+}
+
 .AnnouncementsContainer {
     display: grid;
+    box-shadow: 0px 2px 5px lightslategray;
+
     padding: 25px;
     border-radius: 15px;
     background-color: white;
@@ -204,6 +250,8 @@ main {
 
 .trendingContainer {
     display: grid;
+    box-shadow: 0px 2px 5px lightslategray;
+
     padding: 25px;
     border-radius: 15px;
     background-color: white;
@@ -215,7 +263,7 @@ main {
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 80px 1fr;
 }
 
 .trendingCards img {
