--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+:root {
+    --background-color: #881337
+
+}
+
+
 body { 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 0px;
     margin: 0px;
 }
@@ -62,7 +69,7 @@ body {
 
 .resize {
     border-radius: 50%;
-    background-color: #38bdf8;
+    background-color: var(--background-color);
 }
 
 .profileContainer, .resize { 
@@ -80,7 +87,7 @@ body {
 }
 
 .buttonContainer button {
-    background: #38bdf8;
+    background: var(--background-color);
     height: 35px;
     width: 100px;
     border-radius: 25px;
@@ -104,7 +111,7 @@ body {
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    background-color: #38bdf8;
+    background-color: var(--background-color);
     background-image: url("../Admin-Dashboard/images/Sprite-0001.png");  
     background-size: cover; 
 }
@@ -118,7 +125,7 @@ body {
     padding: 15px 20px 20px 20px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    background-color: #38bdf8;
+    background-color: var(--background-color);
 }
 
 .sidebar img {
